--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+@font-face {
+ font-family: NanumSquare;
+ src: url(../lib/font/NanumSquareR.eot),
+ url(../lib/font/NanumSquareR.woff) format('woff'),
+ url(../lib/font/NanumSquareR.ttf) format('truetype');
+}
+@font-face {
+ font-family: NanumSquareB;
+ src: url(../lib/font/NanumSquareB.eot),
+ url(../lib/font/NanumSquareB.woff) format('woff'),
+ url(../lib/font/NanumSquareB.ttf) format('truetype');
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -16,24 +29,29 @@ li{
   display: block;
   clear: both;
 }
-html{}
+html{
+  background: #e2e2e2;
+  font-family: NanumSquare;
+}
 body{}
 #wrap{}
 header{
   position: relative;
+  background: #fff;
 }
 header div.slideBtn{
   position: absolute;
-  top:21%;
+  top:50%;
   left:3%;
-  width:30px;
+  margin-top: -28px;
+  width:25px;
 }
 header div.slideBtn ul{}
 header div.slideBtn ul li{
   width:100%;
   height: 4px;
-  background: #000;
-  margin: 6px 0;
+  background: #c1c1c1;
+  margin: 4px 0;
   border-radius: 2px;
 }
 header div.slideBtn ul li:first-child{
@@ -51,6 +69,7 @@ header h1 img{
   width:50%;
 }
 header div.login{
+  display: none;
   position: absolute;
   width:30px;
   height:30px;
@@ -98,6 +117,8 @@ section .slick-arrow.slick-next{
 }
 
 section div.banner{
+  background: #fff;
+  padding: 1% 0;
   margin-top: 5%;
 }
 section div.banner div{
@@ -107,18 +128,46 @@ section div.banner img{
   width:100%;
 }
 section div.accordion{
+  background: #fff;
   width:100%;
   text-align: center;
-  margin-top: 3%;
+  margin-top: 4%;
+  padding: 1% 0;
+}
+section div.accordion h4{
+  margin:20px 0;
+  font-size:1.25em;
+  font-weight: 400;
 }
 section div.accordion div{
   padding: 2% 0;
-  background: #ccc;
+  border:2px solid #aaa;
+  margin: 5px;
+  position: relative;
+}
+section div.accordion div div{
+  width:35px;
+  height:35px;
+  line-height: 35px;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  top:-2px;
+  left:-2px;
+  border:0;
+  background: #fff;
+  color: #004478;
+  font-size:1.25em;
+  font-weight: 600;
 }
 section div.accordion div p{
-
+  font-size:1.25em;
+  color:#272727;
 }
-section div.accordion div p:nth-child(2){}
+section div.accordion div p:nth-child(3){
+  font-size:0.825em;
+  margin-top:5px;
+}
 
 section div.whySky{
   width:100%;
@@ -127,28 +176,48 @@ section div.whySky{
 }
 section div.whySky div.whySkyBox{
   width:calc(50% - 0.5%);
-  height: 200px;
+  height: 300px;
   float: left;
   margin-bottom: 1%;
-  background: #ebebeb;
+  background: #fff;
+  overflow: hidden;
+  position: relative;
+}
+section div.whySky div.whySkyBox div.imgBox{
+  width:100%;
+  height:55%;
+  overflow: hidden;
+}
+section div.whySky div.whySkyBox div.imgBox img{
+  width:100%;
+  vertical-align: bottom;
 }
 section div.whySky div.whySkyBox div.Number{
   width:40px;
   height:40px;
   line-height: 40px;
-  margin: 10% auto;
   border-radius: 50%;
   background: #84ccc9;
   color:#fff;
+  position: absolute;
+  top:49%;
+  left:50%;
+  margin-left: -20px;
 }
 section div.whySky div.whySkyBox:nth-child(2n-1){
   margin-right: 1%;
 }
 section div.whySky div.whySkyBox p{
+  font-family: NanumSquareB;
   font-size:1em;
+  margin-top: 16%;
 }
-section div.whySky div.whySkyBox p:nth-child(3){
+section div.whySky div.whySkyBox p:nth-child(4){
+  font-family: NanumSquare;
   font-size:0.825em;
+  width:85%;
+  margin: 0 auto;
+  margin-top: 4%;
 }
 
 section div.whySky div.whySky_01{}
@@ -162,16 +231,18 @@ section div.whySky div.whySky_04{}
 
 section div.tabMenu{
   margin-top: 3%;
+  margin-bottom: 10%;
 }
 section div.tabMenu ul.tabs{
     width:100%;
     margin: 0px;
-    padding: 0px;
+    padding: 3% 0;
     list-style: none;
+    background: #fff;
   }
 section div.tabMenu ul.tabs li{
-    background: none;
-    color: #222;
+
+    color: #8e8e8e;
     display: inline-block;
     width:50%;
     float: left;
@@ -180,19 +251,34 @@ section div.tabMenu ul.tabs li{
   }
 
 section div.tabMenu ul.tabs li.current{
-    background: #ededed;
-    color: #222;
+    color: #04080b;
   }
 
 section div.tabMenu .tab-content{
     display: none;
-    background: #ededed;
-    padding: 15px;
+    background: #fff;
+    padding: 2% 0;
+    height: 110px;
   }
-
 section div.tabMenu .tab-content.current{
     display: inherit;
   }
+section div.tabMenu .tab-content ul{
+  padding: 0 10px;
+}
+section div.tabMenu .tab-content ul li{
+  font-size:0.825em;
+  width:75%;
+  float: left;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin: 3px 0;
+}
+section div.tabMenu .tab-content ul span{
+  font-size:0.825em;
+  float:right;
+}
 footer{
   width:100%;
   position: fixed;
