--- a/css/style.css
+++ b/css/style.css
@@ -107,18 +107,45 @@ section .slick-slide img{
 section .slick-arrow{
   position: absolute;
   top:50%;
+  margin-top: -25px;
+  text-indent: -9999px;
+  width:50px;
+  height:50px;
 }
 section .slick-arrow.slick-prev{
   z-index: 1;
-  left:3%;
+  left:1.5%;
+  background: url(../images/prev.png) no-repeat;
+  background-size:100%;
 }
 section .slick-arrow.slick-next{
-  right:3%;
+  right:1.5%;
+  background: url(../images/next.png) no-repeat;
+  background-size:100%;
 }
-
+section .slick-dots{
+  position: absolute;
+  bottom:10px;
+  width:100%;
+  text-align: center;
+}
+section .slick-dots li{
+  display: inline-block;
+  margin: 0 5px;
+  text-indent: -9999px;
+  width:20px;
+  height:20px;
+  border-radius: 50%;
+  background: #fff;
+  transition: all 1s;
+}
+section .slick-dots li.slick-active{
+  width:40px;
+  border-radius: 42px;
+}
 section div.banner{
   background: #fff;
-  padding: 1% 0;
+  padding: 4% 0;
   margin-top: 5%;
 }
 section div.banner div{
@@ -131,20 +158,20 @@ section div.banner img{
   width:100%;
 }
 section div.accordion{
-  background: #84ccc9;
-
+  background: #5c6068;
   width:100%;
   text-align: center;
   margin-top: 5%;
-  padding: 2% 0;
+  padding: 3% 0;
 }
 
 section div.accordion h4{
-  margin:20px 0;
-  font-size:1.5em;
+  margin: 20px 0;
+  font-size: 2em;
   font-weight: 400;
   text-align: left;
   margin-bottom: 40px;
+  color: #fff;
 }
 section div.accordion h4:before{
   content: '';
@@ -152,14 +179,14 @@ section div.accordion h4:before{
   width:5px;
   height:20px;
   background: #fff;
-  margin: 0 5px;
   vertical-align: middle;
-  margin-left: 20px;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 section div.accordion div{
   padding: 2% 20%;
   background: #fff;
-  margin: 5px;
+  margin:1%;
   position: relative;
   overflow: hidden;
 }
@@ -194,6 +221,24 @@ section div.whySky{
   margin-top: 5%;
   text-align: center;
 }
+section div.whySky h4{
+  padding: 40px 0;
+  font-size: 2em;
+  font-weight: 400;
+  text-align: left;
+  color: #000;
+  background: #fff;
+}
+section div.whySky h4:before{
+  content: '';
+  display: inline-block;
+  width:5px;
+  height:20px;
+  background: #000;
+  vertical-align: middle;
+  margin-left: 2%;
+  margin-right: 2%;
+}
 section div.whySky div.whySkyBox{
   width:calc(50% - 0.5%);
   height: 600px;
@@ -211,6 +256,7 @@ section div.whySky div.whySkyBox div.imgBox{
 section div.whySky div.whySkyBox div.imgBox img{
   width:100%;
   vertical-align: bottom;
+  margin-top: -17%;
 }
 section div.whySky div.whySkyBox div.Number{
   width:40px;
@@ -224,7 +270,7 @@ section div.whySky div.whySkyBox div.Number{
   left:50%;
   margin-left: -20px;
 }
-section div.whySky div.whySkyBox:nth-child(2n-1){
+section div.whySky div.whySkyBox:nth-child(2n){
   margin-right: 1%;
 }
 section div.whySky div.whySkyBox p{
@@ -241,7 +287,9 @@ section div.whySky div.whySkyBox p:nth-child(4){
 }
 
 section div.whySky div.whySky_01{}
-section div.whySky div.whySky_01 img{}
+section div.whySky div.whySky_01 img{
+  width:60%;
+}
 
 section div.whySky div.whySky_02{}
 
@@ -288,7 +336,11 @@ section div.tabMenu .tab-content.current{
     display: inherit;
   }
 section div.tabMenu .tab-content ul{
-  padding: 0 4%;
+  padding: 0 3.5%;
+}
+section div.tabMenu .tab-content ul li::before{
+  content: '·';
+  margin-right: 1%;
 }
 section div.tabMenu .tab-content ul li{
   font-size:1.5em;
