--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ header div.lnb ul li{
   display: none;
   width:100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top:0;
   right:0;
   z-index: 9000;
