--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ section div.whySky div.whySky_04{}
 
 section div.tabMenu{
   margin-top: 5%;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
 }
 section div.tabMenu ul.tabs{
     width:100%;
@@ -479,6 +479,31 @@ section div.tabMenu .tab-content ul span{
   font-size:1.5em;
   float:right;
 }
+div.footer{
+  background: #2e3b44;
+  color:#Fff;
+  padding-bottom: 12%;
+}
+div.footer ul{
+  padding: 2% 1%;
+}
+div.footer ul li{
+  width:24%;
+  height:60px;
+  line-height: 60px;
+  text-align: center;
+  float:left;
+  font-size:1.8em;
+  background: #374854;
+  border-radius: 3px;
+  margin:0.5%;
+}
+div.footer p{
+  padding: 2%;
+  font-size:0.6em;
+  text-align: center;
+  line-height: 0.5em;
+}
 footer{
   width:100%;
   position: fixed;
@@ -493,19 +518,19 @@ footer ul li{
   line-height: 90px;
   float:left;
   text-align: center;
-  color:#404040;
-  background: #84ccc9;
+  color:#fff;
+  background: #619f9d;
   font-size:2em;
   font-weight: 400;
-  color:#414141;
 }
 footer ul li.kakao{
-  background: #6bafac;
-  color:#717171;
+  background: #59908e;
+
 }
 footer ul li.kakao a{
   display: block;
   height:100%;
+  color:#fff;
 }
 footer ul li img{
   width:10%;
